<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/btnForgotPasswordBack"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/arrow_back"/>
    
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_130sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/reset_password_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textSize="@dimen/_30ssp"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/reset_info_text"
            android:layout_marginBottom="@dimen/_15sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_label"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/emailPasswordReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailPasswordReset"
            android:background="@drawable/email_password_reset_background"
            android:inputType="textEmailAddress"/>

        <ProgressBar
            android:id="@+id/forgetPasswordProgressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_button_background"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</RelativeLayout>
