<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/black">-->

<!--        <Button-->
<!--            android:id="@+id/button_save"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="Save"-->
<!--            android:backgroundTint="@color/black"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="15sp"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->

<!--        <EditText-->
<!--            android:id="@+id/edittext"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Enter New Task"-->
<!--            android:minHeight="48dp"-->
<!--            android:paddingStart="7dp"-->
<!--            android:paddingEnd="7dp"-->
<!--            android:textColor="@color/white"-->
<!--            android:textColorHint="@color/white"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/button_save" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layoutAddTaskContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/background_dialog">

        <ImageView
            android:id="@+id/imageAddTask"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_add_task_24"
            app:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/imageAddTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageAddTask"
            app:layout_constraintTop_toTopOf="@id/imageAddTask"/>
        <EditText
            android:id="@+id/inputTask"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_vertical"
            android:hint="@string/enter_task"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textUri"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/imageAddTask"/>

        <TextView
            android:id="@+id/textAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="@string/add"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTask"/>
        <TextView
            android:id="@+id/textCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="CANCEL"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textAdd"
            app:layout_constraintTop_toBottomOf="@+id/inputTask"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
