<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.App.Black"
    android:id="@+id/drawerLayout"
    tools:context=".activities.MainActivity">

    <!-- Main Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar with Navigation Icon -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_40sdp"
            android:layoutDirection="rtl"
            app:navigationIcon="@drawable/baseline_menu_24"
            app:navigationIconTint="@color/colorIcons"
            tools:ignore="MissingConstraints" />

        <!-- Content Area -->

        <!-- TextView for My Notes -->
        <TextView
            android:id="@+id/textMyNotes"
            android:layout_width="373dp"
            android:layout_height="28dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="true"
            android:text="@string/my_notes"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <!-- LinearLayout for Search -->
        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/textMyNotes">

            <!-- EditText for Search -->
            <!-- Search Icon -->
            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search"
                app:tint="@color/colorSearchIcon" />

            <!-- EditText for Search -->
            <EditText
                android:id="@+id/inputSearchNotes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/search_notes"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <!-- RecyclerView for Notes -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:clipToPadding="false"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
            app:layout_constraintTop_toBottomOf="@id/layoutSearch" />


        <!-- LinearLayout for Quick Actions -->
        <LinearLayout
            android:id="@+id/layoutQuickActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorQuickActionsBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Add Note Icon -->
            <ImageView
                android:id="@+id/imagePracticeReminder"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add_outline"
                app:tint="@color/colorIcons" />

            <!-- Add Image Icon -->
            <ImageView
                android:id="@+id/imageAddImage"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_image"
                app:tint="@color/colorIcons" />

            <!-- Add Web Link Icon -->
            <ImageView
                android:id="@+id/imageAddWebLink"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_web_link"
                app:tint="@color/colorIcons" />
        </LinearLayout>

        <!-- Main Add Note Button -->
        <ImageView
            android:id="@+id/imageAddNoteMain"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/background_add_button"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add"
            android:padding="@dimen/_5sdp"
            android:elevation="@dimen/_4sdp"
            app:tint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutQuickActions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/header_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
